// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AdminCard component should render StyledCard with same props 1`] = `
<WithStyles(Cards)
  test1="test1value"
  test2="test2value"
/>
`;

exports[`Cards component renders with custom colours and full height 1`] = `
<ForwardRef(Grid)
  className="undefined AdminCard"
  container={true}
  spacing={0}
>
  <ForwardRef(Grid)
    item={true}
    xs={12}
  >
    <ForwardRef(Grid)
      item={true}
      xs={12}
    >
      <ForwardRef(Grid)
        container={true}
        spacing={1}
      >
        <ForwardRef(Grid)
          item={true}
          xs={true}
        >
          <hr />
        </ForwardRef(Grid)>
        <ForwardRef(Grid)
          item={true}
          xs="auto"
        >
          <ForwardRef(Typography)
            color="primary"
            component="h4"
          >
             
            card title
          </ForwardRef(Typography)>
        </ForwardRef(Grid)>
      </ForwardRef(Grid)>
    </ForwardRef(Grid)>
  </ForwardRef(Grid)>
  <ForwardRef(Grid)
    item={true}
    xs={12}
  />
</ForwardRef(Grid)>
`;

exports[`Cards component renders with square top and accent header 1`] = `
<ForwardRef(Grid)
  className="undefined AdminCard"
  container={true}
  spacing={0}
>
  <ForwardRef(Grid)
    item={true}
    xs={12}
  >
    <ForwardRef(Grid)
      item={true}
      xs={12}
    >
      <ForwardRef(Grid)
        container={true}
        spacing={1}
      >
        <ForwardRef(Grid)
          item={true}
          xs={true}
        >
          <hr />
        </ForwardRef(Grid)>
        <ForwardRef(Grid)
          item={true}
          xs="auto"
        >
          <ForwardRef(Typography)
            color="primary"
            component="h4"
          >
             
            card title
          </ForwardRef(Typography)>
        </ForwardRef(Grid)>
      </ForwardRef(Grid)>
    </ForwardRef(Grid)>
  </ForwardRef(Grid)>
  <ForwardRef(Grid)
    item={true}
    xs={12}
  />
</ForwardRef(Grid)>
`;

exports[`Cards component renders with title and help button 1`] = `
<ForwardRef(Grid)
  className="testClass AdminCard"
  container={true}
  spacing={0}
>
  <ForwardRef(Grid)
    item={true}
    xs={12}
  >
    <ForwardRef(Grid)
      item={true}
      xs={12}
    >
      <ForwardRef(Grid)
        container={true}
        spacing={1}
      >
        <ForwardRef(Grid)
          item={true}
          xs={true}
        >
          <hr />
        </ForwardRef(Grid)>
        <ForwardRef(Grid)
          item={true}
          xs="auto"
        >
          <ForwardRef(Typography)
            color="primary"
            component="h4"
          >
             
            card title
          </ForwardRef(Typography)>
        </ForwardRef(Grid)>
      </ForwardRef(Grid)>
    </ForwardRef(Grid)>
  </ForwardRef(Grid)>
  <ForwardRef(Grid)
    item={true}
    xs={12}
  />
</ForwardRef(Grid)>
`;

exports[`Cards component renders with title and no help icon 1`] = `
<ForwardRef(Grid)
  className="testClass AdminCard"
  container={true}
  spacing={0}
>
  <ForwardRef(Grid)
    item={true}
    xs={12}
  >
    <ForwardRef(Grid)
      item={true}
      xs={12}
    >
      <ForwardRef(Grid)
        container={true}
        spacing={1}
      >
        <ForwardRef(Grid)
          item={true}
          xs={true}
        >
          <hr />
        </ForwardRef(Grid)>
        <ForwardRef(Grid)
          item={true}
          xs="auto"
        >
          <ForwardRef(Typography)
            color="primary"
            component="h4"
          >
             
            card title
          </ForwardRef(Typography)>
        </ForwardRef(Grid)>
      </ForwardRef(Grid)>
    </ForwardRef(Grid)>
  </ForwardRef(Grid)>
  <ForwardRef(Grid)
    item={true}
    xs={12}
  />
</ForwardRef(Grid)>
`;
